--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <title>Web Thang</title>
+
   <meta charset="utf-8" />
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -13,7 +15,15 @@
   <meta name="keywords" content="web app web-app webapp site web-site website thang web-thang webthang" />
   <meta name="author" content="Octavian Theodor NITA (http://github.com/octavian-nita)" />
 
-  <title>Web Thang</title>
+  <meta property="og:site_name" content="Web Thang" />
+  <meta property="og:title" content="Web Thang" />
+  <meta property="og:description"
+        content="Yet another website / web app template to kick-start one's web-based, toy projects" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="apple-touch-icon-152x152-precomposed.png" />
+  <meta property="og:image:width" content="152" />
+  <meta property="og:image:height" content="152" />
+  <meta property="og:url" content="http://github.com/octavian-nita/web-thang" />
 
   <link rel="stylesheet" href="http://cdn.jsdelivr.net/normalize/3.0.2/normalize.min.css" />
   <link rel="stylesheet" href="css/main.css" />
@@ -21,12 +31,32 @@
 
 <body>
 
+<!--[if lt IE 9]>
+<p class="browsehappy">
+  You are using an <strong>outdated</strong> browser.
+  Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+</p>
+<![endif]-->
+
+<header role="banner">
+  <h1></h1>
+
+  <h2></h2>
+  <nav></nav>
+</header>
+
 <main role="main">
+
+  <figure><!-- for games, mostly -->
+    <canvas id="interface"></canvas>
+    <figcaption id="caption" class="alert">The first player who ...</figcaption>
+  </figure>
 
 </main>
 
 <footer role="contentinfo">
-  <p>Copyright (c) 2014 <a href="mailto:mnothro@yahoo.com">Octavian Theodor NITA</a>. All Rights Reserved.</p>
+  <p id="copyright">Copyright &copy; 2014 <a href="mailto:mnothro@yahoo.com">Octavian Theodor NITA</a>. All Rights
+                    Reserved.</p>
 </footer>
 
 <script src="http:////cdn.jsdelivr.net/jquery/2.1.1/jquery.min.js"></script>
